<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/tab_home"
        android:orderInCategory="1"
        android:title="@string/tab_home"
        app:showAsAction="always" />
    <item
        android:id="@+id/transferFragment"
        android:icon="@drawable/tab_transfer"
        android:orderInCategory="2"
        android:title="@string/tab_transfer"
        app:showAsAction="always" />
    <item
        android:id="@+id/mainFragment"
        android:icon="@drawable/tab_mining"
        android:orderInCategory="2"
        android:title="@string/tab_mining"
        app:showAsAction="always" />
    <item
        android:id="@+id/smartStakingFragment"
        android:icon="@drawable/tab_smart_stake"
        android:orderInCategory="2"
        android:title="@string/tab_smart_stake"
        app:showAsAction="always" />
    <item
        android:id="@+id/tokenManagementFragment"
        android:icon="@drawable/tab_token_issue"
        android:orderInCategory="2"
        android:title="@string/tab_token_management"
        app:showAsAction="always" />
</menu>